bugs and mob fixed

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -14,15 +14,149 @@
         <ul class="header-menu">
             <li class="header-menu-item">
                 <a href="#" class="header-menu-link current">Прогнозы и конкурсы</a>
+                <div class="header-menu-sub">
+                    <div class="header-menu-sub--helper">
+                        <div class="header-menu-sub-title">Линия</div>
+                        <div class="header-menu-sub-row">
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Все прогнозы</a>
+                                        <ul class="header-menu-sub-list header-menu-sub-list--dotted header-menu-sub-list--sub">
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">Лучшие</a>
+                                            </li>
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">Популярные</a>
+                                            </li>
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">На сегодня</a>
+                                            </li>
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">На завтра</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Список конкурсов</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Общие правила</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Вопросы и ответы</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Рейтинг капперов</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="header-menu-item">
                 <a href="#" class="header-menu-link">Предматч</a>
+                <div class="header-menu-sub">
+                    <div class="header-menu-sub--helper">
+                        <div class="header-menu-sub-row">
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Популярное</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Футбол</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Теннис</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Хоккей</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Баскетбол</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Волейбол</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="header-menu-item">
                 <a href="#" class="header-menu-link">Букмекеры</a>
+                <div class="header-menu-sub">
+                    <div class="header-menu-sub--helper">
+                        <div class="header-menu-sub-row">
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Рейтинг редакции</a>
+                                        <ul class="header-menu-sub-list header-menu-sub-list--dotted header-menu-sub-list--sub">
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">Коэффициенты (маржа)</a>
+                                            </li>
+                                            <li class="header-menu-sub-list-item">
+                                                <a href="#" class="header-menu-sub-list-link">Линия и роспись</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Рейтинг игроков</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>Акции и бонусы</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>Тест-драйв БК</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>Отзывы на БК</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>FAQ</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="header-menu-item">
                 <a href="#" class="header-menu-link">Практика</a>
+                <div class="header-menu-sub">
+                    <div class="header-menu-sub--helper">
+                        <div class="header-menu-sub-row">
+                            <div class="header-menu-sub-col">
+                                <ul class="header-menu-sub-list">
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Важно и полезно</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link">Вопросы и ответы</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>Тест-драйв</a>
+                                    </li>
+                                    <li class="header-menu-sub-list-item">
+                                        <a href="#" class="header-menu-sub-list-link link-icon"><i class="icon"><img src="assets/img/pin.svg" alt="pin"></i>Народное мнение</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </li>
             <li class="header-menu-item">
                 <a href="#" class="header-menu-link">Записи</a>
