--- a/src/html/_sidebar-right.html
+++ b/src/html/_sidebar-right.html
@@ -5,7 +5,7 @@
             <div class="sidebar__r__capper">
                 <div class="sidebar__r__capper__top">
                     <div class="sidebar__r__capper__avatar">
-                        <img src="assets/img/" alt="">
+                        <img src="assets/img/seomaestro@2x.png" alt="seomaestro">
                     </div>
                     <div class="sidebar__r__capper__name">Heo780109</div>
                 </div>
@@ -36,7 +36,7 @@
             <div class="sidebar__r__capper">
                 <div class="sidebar__r__capper__top">
                     <div class="sidebar__r__capper__avatar">
-                        <img src="assets/img/" alt="">
+                        <img src="assets/img/oldstar@2x.png" alt="oldstar">
                     </div>
                     <div class="sidebar__r__capper__name">oldstar</div>
                 </div>
@@ -67,7 +67,7 @@
             <div class="sidebar__r__capper">
                 <div class="sidebar__r__capper__top">
                     <div class="sidebar__r__capper__avatar">
-                        <img src="assets/img/" alt="">
+                        <img src="assets/img/prognozir@2x.png" alt="prognozir">
                     </div>
                     <div class="sidebar__r__capper__name">prognozir</div>
                 </div>
@@ -98,7 +98,7 @@
             <div class="sidebar__r__capper">
                 <div class="sidebar__r__capper__top">
                     <div class="sidebar__r__capper__avatar">
-                        <img src="assets/img/" alt="">
+                        <img src="assets/img/USBZVER@2x.png" alt="USBZVER">
                     </div>
                     <div class="sidebar__r__capper__name">USBZVER</div>
                 </div>
@@ -127,7 +127,7 @@
             <div class="sidebar__r__capper">
                 <div class="sidebar__r__capper__top">
                     <div class="sidebar__r__capper__avatar">
-                        <img src="assets/img/" alt="">
+                        <img src="assets/img/wmarko767@2x.png" alt="wmarko767">
                     </div>
                     <div class="sidebar__r__capper__name">wmarko767</div>
                 </div>
