video edits fixed

--- a/src/html/_footer.html
+++ b/src/html/_footer.html
@@ -87,15 +87,15 @@
                 <h3 class="footer-title">Лучшие букмекеры</h3>
                 <div class="footer-bk">
                     <div class="footer-bk-logo"><img src="assets/img/1-xstavka.svg" alt="1-xstavka"></div>
-                    <a href="#" class="footer-bk-btn">Обзор</a>
+                    <a href="#" class="footer-bk-btn"><span class="btn__text">Обзор</span></a>
                 </div>
                 <div class="footer-bk">
                     <div class="footer-bk-logo"><img src="assets/img/parimatch@3x.png" alt="parimatch"></div>
-                    <a href="#" class="footer-bk-btn">Обзор</a>
+                    <a href="#" class="footer-bk-btn"><span class="btn__text">Обзор</span></a>
                 </div>
                 <div class="footer-bk">
                     <div class="footer-bk-logo"><img src="assets/img/winline@3x.png" alt="winline"></div>
-                    <a href="#" class="footer-bk-btn">Обзор</a>
+                    <a href="#" class="footer-bk-btn"><span class="btn__text">Обзор</span></a>
                 </div>
             </div>
             <div class="footer-middle-col">
