--- a/src/html/_sidebar-right.html
+++ b/src/html/_sidebar-right.html
@@ -27,7 +27,7 @@
                         <span class="sidebar__r__capper__text__val">+162,54%</span>
                     </div>
                     <div class="sidebar__r__capper__line sidebar__r__capper__line--actual">
-                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold">Актуальные прогнозы</span>
+                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold"><a href="#" class="sidebar__r__capper__link">Актуальные прогнозы</a></span>
                         <span class="sidebar__r__capper__text__dots"></span>
                         <span class="sidebar__r__capper__text__val sidebar__r__capper__text__val--actual">14</span>
                     </div>
@@ -58,7 +58,7 @@
                         <span class="sidebar__r__capper__text__val">+98,02%</span>
                     </div>
                     <div class="sidebar__r__capper__line sidebar__r__capper__line--actual">
-                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold">Актуальные прогнозы</span>
+                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold"><a href="#" class="sidebar__r__capper__link">Актуальные прогнозы</a></span>
                         <span class="sidebar__r__capper__text__dots"></span>
                         <span class="sidebar__r__capper__text__val sidebar__r__capper__text__val--actual">10</span>
                     </div>
@@ -89,7 +89,7 @@
                         <span class="sidebar__r__capper__text__val">+94,92%</span>
                     </div>
                     <div class="sidebar__r__capper__line sidebar__r__capper__line--actual">
-                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold">Актуальные прогнозы</span>
+                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold"><a href="#" class="sidebar__r__capper__link">Актуальные прогнозы</a></span>
                         <span class="sidebar__r__capper__text__dots"></span>
                         <span class="sidebar__r__capper__text__val sidebar__r__capper__text__val--actual">9</span>
                     </div>
@@ -120,7 +120,7 @@
                         <span class="sidebar__r__capper__text__val">+90,1%</span>
                     </div>
                     <div class="sidebar__r__capper__line">
-                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold">Последние прогнозы</span>
+                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold"><a href="#" class="sidebar__r__capper__link">Последние прогнозы</a></span>
                     </div>
                 </div>
             </div>
@@ -149,7 +149,7 @@
                         <span class="sidebar__r__capper__text__val">+79,46%</span>
                     </div>
                     <div class="sidebar__r__capper__line">
-                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold">Последние прогнозы</span>
+                        <span class="sidebar__r__capper__text sidebar__r__capper__text--bold"><a href="#" class="sidebar__r__capper__link">Последние прогнозы</a></span>
                     </div>
                 </div>
             </div>
