--- a/src/html/contests.html
+++ b/src/html/contests.html
@@ -96,7 +96,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +170,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                                 <div class="contest-table-row contest-table-row--mob">
@@ -219,7 +219,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                                 <div class="contest-table-row contest-table-row--mob">
@@ -268,7 +268,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                             </div>
@@ -306,7 +306,7 @@
                                                 <a href="#" class="h3 contest-title-link">Эксперт НБА</a>
                                                 <p class="contest-sub-title"><i class="icon"><img src="assets/img/stage-registration.svg" alt="stage-registration"></i> Набор участников</p>
                                             </div>
-                                            <button class="contest-leave-btn">Покинуть</button>
+                                            <button class="contest-leave-btn"><span class="btn__text">Покинуть</span></button>
                                         </div>
                                     </div>
                                 </div>
@@ -320,7 +320,7 @@
                                                 <a href="#" class="h3 contest-title-link">Эксперт НБА</a>
                                                 <p class="contest-sub-title"><i class="icon"><img src="assets/img/stage-registration.svg" alt="stage-registration"></i> Набор участников</p>
                                             </div>
-                                            <button class="contest-leave-btn">Покинуть</button>
+                                            <button class="contest-leave-btn"><span class="btn__text">Покинуть</span></button>
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
@@ -342,7 +342,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--users"><img src="assets/img/users.svg" alt="users"></button>
+                                        <button class="contest-button contest-button--users"><span class="btn__text"><img src="assets/img/users.svg" alt="users"></span></button>
                                     </div>
                                 </div>
                                 <div class="contest-table-row contest-table-row--mob">
@@ -387,7 +387,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--users"><img src="assets/img/users.svg" alt="users"></button>
+                                        <button class="contest-button contest-button--users"><span class="btn__text"><img src="assets/img/users.svg" alt="users"></span></button>
                                     </div>
                                 </div>
                                 <div class="contest-table-row contest-table-row--mob">
@@ -436,7 +436,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                                 <div class="contest-table-row contest-table-row--mob">
@@ -485,7 +485,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                             </div>
@@ -558,7 +558,7 @@
                                         </div>
                                     </div>
                                     <div class="contest-table-item">
-                                        <button class="contest-button contest-button--graph"><img src="assets/img/graph.svg" alt="graph"></button>
+                                        <button class="contest-button contest-button--graph"><span class="btn__text"><img src="assets/img/graph.svg" alt="graph"></span></button>
                                     </div>
                                 </div>
                             </div>
