--- a/nbparts/index.html
+++ b/nbparts/index.html
@@ -37,8 +37,8 @@
                                 </div>
                                 <span class="header-logo-sub">Огромный выбор запчастей для ноутбуков</span>
                             </div>
-                        </div>
-                        <div class="header-item header-item--search">
+                        </div><!--
+                        --><div class="header-item header-item--search">
                             <form class="header-search">
                                 <div class="header-search-input">
                                     <button class="header-search-submit"><img src="assets/search.png" alt="search"></button>
@@ -46,6 +46,7 @@
                                 </div>
                             </form>
                         </div>
+                        <div class="catalog-btn-mob">Каталог товаров</div>
                         <div class="header-item ml-auto">
                             <a href="#" class="header-cart header-link">
                                 <div class="header-cart-title">Корзина</div>
@@ -58,25 +59,8 @@
             <div class="menu">
                 <div class="container">
                     <ul class="menu-list">
-                        <li class="menu-list-item menu-list-item--catalog menu-list-item--has-sub-mob">
+                        <li class="menu-list-item menu-list-item--catalog sm-hidden">
                             <a href="#" class="menu-list-link">КАТАЛОГ ТОВАРОВ</a>
-                            <ul class="menu-sub-list menu-sub-list--mob">
-                                <li class="menu-sub-list-item">
-                                    <a href="#" class="menu-list-link menu-list-link--back">Назад</a>
-                                </li>
-                                <li class="menu-sub-list-item">
-                                    <a href="#" class="menu-list-link">Lorem ipsum dolor</a>
-                                </li>
-                                <li class="menu-sub-list-item">
-                                    <a href="#" class="menu-list-link">Lorem ipsum dolor</a>
-                                </li>
-                                <li class="menu-sub-list-item">
-                                    <a href="#" class="menu-list-link">Lorem ipsum dolor</a>
-                                </li>
-                                <li class="menu-sub-list-item">
-                                    <a href="#" class="menu-list-link">Lorem ipsum dolor</a>
-                                </li>
-                            </ul>
                         </li>                            
                         <li class="menu-list-item">
                             <a href="#" class="menu-list-link">О КОМПАНИИ</a>
@@ -108,6 +92,9 @@
 
                         <ul class="sidebar-sub-list">
                             <li class="sidebar-sub-list-item">
+                                <a href="#" class="sidebar-list-link sidebar-sub-list-link sidebar-sub-list-link--back">Назад</a>
+                            </li>
+                            <li class="sidebar-sub-list-item">
                                 <a href="#" class="sidebar-list-link sidebar-sub-list-link">Lorem ipsum dolor</a>
                             </li>
                             <li class="sidebar-sub-list-item">
@@ -124,6 +111,9 @@
 
                         <ul class="sidebar-sub-list">
                             <li class="sidebar-sub-list-item">
+                                <a href="#" class="sidebar-list-link sidebar-sub-list-link sidebar-sub-list-link--back">Назад</a>
+                            </li>
+                            <li class="sidebar-sub-list-item">
                                 <a href="#" class="sidebar-list-link sidebar-sub-list-link">Lorem ipsum dolor</a>
                             </li>
                         </ul>
@@ -133,6 +123,9 @@
                         <a href="#" class="sidebar-list-link">Аккумуляторы для ноутбуков</a>
 
                         <ul class="sidebar-sub-list">
+                            <li class="sidebar-sub-list-item">
+                                <a href="#" class="sidebar-list-link sidebar-sub-list-link sidebar-sub-list-link--back">Назад</a>
+                            </li>
                             <li class="sidebar-sub-list-item">
                                 <a href="#" class="sidebar-list-link sidebar-sub-list-link">Lorem ipsum dolor</a>
                             </li>
